[package]
name = "resolvo"
version = "0.1.0"
edition = "2021"
description = "Long-amplicon template recovery from noisy long-read clusters using FAD/RAD"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/resolvo"

[lib]
name = "resolvo"
path = "src/lib.rs"

[[bin]]
name = "resolvo"
path = "src/bin/resolvo.rs"
required-features = ["cli"]

[features]
default = ["cli", "parallel", "serde"]
cli = ["dep:clap"]
parallel = ["dep:rayon"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
anyhow = "1"
thiserror = "1"
flate2 = "1"
log = "0.4"
num = "0.4"
kmerutils = { git = "https://github.com/jianshu93/kmerutils", features = ["stdsimd"]}
# anndists = { version = "0.1.3", features = ["stdsimd"] }
anndists = { git = "https://github.com/jianshu93/anndists", features = ["stdsimd"] }
clap = { version = "4", features = ["derive"], optional = true }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
